syntax = "proto3";

package imageoptimizer;

option go_package = "imageoptimizer/";

service ImageOptimizer {
    rpc OptimizeImage (OptimizeImageRequest) returns (OptimizeImageReply) {}
}

message OptimizeImageRequest {
    bytes image = 1;
    SizingOptions scale = 2;
    bool greyscale = 3;
}

message SizingOptions {
    bool scale = 1;
    int32 targetWidth = 2;
    int32 targetHeight = 3;
  }

message OptimizeImageReply {
    bytes content = 1;
}
